# iem-plugin-suite

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog.md  InstallationGuide.txt  LICENSE  Makefile  README.md  linux_buildAll.sh  macOS_buildAll.sh  macOS_buildForRelease.sh  win_buildAll.bat
.git-ci/: fftw4win.sh  getjuce.sh  getvst.sh  gitlab-iem.yml  osx_embedlibs.sh
.git.iem.at/: ci.yml
AllRADecoder/: AllRADecoder.jucer  CMakeLists.txt
AllRADecoder/Source/: AmbisonicNoiseBurst.h  EnergyDistributionVisualizer.h  LoudspeakerTableComponent.h  LoudspeakerVisualizer.h  NoiseBurst.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotateWindow.h  tDesign5200.h
BinauralDecoder/: BinauralDecoder.jucer  CMakeLists.txt
BinauralDecoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BinauralDecoder/Source/EQ/: README.txt
BinauralDecoder/Source/IRs/: README.txt
CoordinateConverter/: CMakeLists.txt  CoordinateConverter.jucer
CoordinateConverter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Decoder/: Decoder.jucer
Decoder/Source/: LoudspeakerTableComponent.h  LoudspeakerVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  configTest.json
DirectionalCompressor/: CMakeLists.txt  DirectionalCompressor.jucer
DirectionalCompressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DirectivityShaper/: CMakeLists.txt  DirectivityShaper.jucer
DirectivityShaper/Source/: DirectivityVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShapeAndOrderXyPad.h
DistanceCompensator/: CMakeLists.txt  DistanceCompensator.jucer
DistanceCompensator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DualDelay/: CMakeLists.txt  DualDelay.jucer
DualDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
EnergyVisualizer/: CMakeLists.txt  EVgrid.json  EnergyVisualizer.jucer  EnergyVisualizerGrid.json  createTDesignProjectedAndTriangulated.m  hammerAitovSample.h  tDesignProjected.h  vertexIndex.h
EnergyVisualizer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisualizerColormap.h  VisualizerComponent.h
FdnReverb/: CMakeLists.txt  FdnReverb.jucer
FdnReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  T60Visualizer.h
MatrixMultiplicator/: MatrixMultiplicator.jucer
MatrixMultiplicator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MatrixMultiplier/: CMakeLists.txt  MatrixMultiplier.jucer
MatrixMultiplier/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MatrixTransformer/: MatrixTransformer.jucer
MatrixTransformer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  configTest.json  errorExpected.json  lrflip.json
MultiBandCompressor/: CMakeLists.txt  MultiBandCompressor.jucer
MultiBandCompressor/Source/: FilterBankVisualizer.h  MasterControl.h  MasterSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MultiEQ/: CMakeLists.txt  MultiEQ.jucer
MultiEQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MultiEncoder/: CMakeLists.txt  MultiEncoder.jucer
MultiEncoder/Source/: EncoderList.h  EnergySpherePanner.h  MasterControlWithText.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
OmniCompressor/: CMakeLists.txt  OmniCompressor.jucer
OmniCompressor/Source/: LookAheadGainReduction.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ProbeDecoder/: CMakeLists.txt  ProbeDecoder.jucer
ProbeDecoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
RoomEncoder/: CMakeLists.txt  RoomEncoder.jucer  createListOfReflections.m  dirac.wav.reapeaks  sweep.wav.reapeaks  sweepRoomEncoder.m
RoomEncoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReflectionsVisualizer.h  reflections.h
SceneRotator/: CMakeLists.txt  SceneRotator.jucer
SceneRotator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleDecoder/: CMakeLists.txt  SimpleDecoder.jucer
SimpleDecoder/Source/: DecoderInfoBox.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleDecoder/Source/Presets/: 5point1.json  5point1point4.json  7point1.json  7point1point4.json  CUBE.json  Cube_8ch.json  MSDecoder.json  Produktionsstudio.json  Quadraphonic.json
StereoEncoder/: CMakeLists.txt  StereoEncoder.jucer
StereoEncoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ToolBox/: CMakeLists.txt  ToolBox.jucer
ToolBox/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_PluginTemplate/: PluginTemplate.jucer  howTo.md
_configurationFiles/: 22_2_NHK.json  3plus7plus0.json  4plus5plus0.json  4plus9plus0.json  7point1.json  9plus10plus3.json  CUBE.json  Octagon+TopSquare.json  Produktionsstudio.json  lrflip.json  stereoDecoder.json  test2.json
_presets/: CUBE.json  Produktionsstudio.json  TestN3D.json  anotherDecoder.json  decoder.json  errorExpected.json  lrflip.json  stereoDecoder.json
resources/: AmbisonicDecoder.h  AudioProcessorBase.h  Compressor.h  ConfigurationHelper.h  Conversions.h  DecoderHelper.h  Delay.h  FeedbackDelayNetwork.h  FilterVisualizerHelper.h  HammerAitov.h  IOHelper.h  LabelAttachment.h  MatrixMultiplication.h  MatrixTransformer.h  MaxRE.h  MultiChannelDelay.h  MultiChannelGain.h  OSCParameterInterface.cpp  OSCParameterInterface.h  OSCReceiverPlus.h  OSCUtilities.h  Quaternion.h  Queue.h  ReferenceCountedDecoder.h  ReferenceCountedMatrix.h  Weights.h  ambisonicTools.h  decoderHelper.h  efficientSHvanilla.cpp  efficientSHvanilla.h  heatmap.h  inPhase.h  interpCoeffsSIMD.h  interpLagrangeWeights.h  tDesignN10.h  tDesignN7.h  viridis_cropped.h
(+45 files in other folders)
